upd: добавил поддержку postgres + миграции
